<resources>
    <string name="app_name">A90ProMasterPOS</string>
    <string name="permission_required">External storage permission is required</string>
    <string name="permission_granted">External storage permission is granted</string>
    <string name="permission_grant_fail">Request for external storage permission failed</string>
    <string name="err_init_sdk">Fail to initialize SDK</string>
    <string name="btn_login">Login</string>
    <string name="btn_change_pwd">Change PWD</string>
    <string name="err_account_not_exists">"Account doesn't exist"</string>
    <string name="info">TMK Index:\t\t\t\t\t\t\t\t\t1</string>
    <string name="zcmk_type">KEY Type</string>
    <string name="load_way">Loading Method</string>
    <string name="hint_input_TR31">PLS input TR31 block</string>
    <string name="hint_input_ciphertext_tdes">PLS input ciphertext TDES key</string>
    <string name="hint_input_key_version">PLS input 3 digits key version</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_load_tdes_zcmk">Load KEK</string>
    <string name="btn_load_tdes_cmi">Load TDES ZCMK encrypted CMI</string>
    <string name="btn_load_tdes_cma">Load TDES ZCMK encrypted CMA</string>
    <string name="btn_load_tdes_cmtk">Load TDES ZCMK encrypted CMTK</string>
    <string name="btn_load_aes256_zcmk">Load AES256 Key</string>
    <string name="btn_load_aes256_cmi">Load AES256 ZCMK encrypted CMI</string>
    <string name="btn_load_aes256_cma">Load AES256 ZCMK encrypted CMA</string>
    <string name="btn_load_aes256_cmtk">Load AES256 ZCMK encrypted CMTK</string>
    <string name="btn_load_cmi_component">Load CMI by components</string>
    <string name="btn_load_cma_component">Load CMA by components</string>
    <string name="btn_load_cmtk_component">Load CMTK by components</string>
    <string name="btn_load_key_ver">Import keys</string>
    <string name="et_input_pwd">PLS input password</string>
    <string name="et_input_username">PLS input user name</string>
    <string name="et_input_old_pwd">PLS input old password</string>
    <string name="et_input_new_pwd_1">PLS input new password</string>
    <string name="et_input_new_pwd_2">PLS input new password again</string>
    <string name="et_input_cmi_ver_kcv">PLS input KCV of CMI version</string>
    <string name="et_input_cmtk_ver_kcv">PLS input KCV of CMTK version</string>
    <string name="hint_input_component_1">PLS input component 1</string>
    <string name="hint_input_component_2">PLS input component 2</string>
    <string name="hint_input_component_3">PLS input component 3</string>
    <string name="input_component">Please input component</string>
    <string name="err_component_len">Incorrect component length</string>
    <string name="btn_init_port">Initialize port</string>
    <string name="btn_transfer_tdes">Transfer Keys</string>
    <string name="btn_transfer_tr31">Transfer Keys</string>
    <string name="err_username">Incorrect username</string>
    <string name="err_empty_new_pwd">New password can not be empty</string>
    <string name="err_pwd_len">Password should be 6 digits at least</string>
    <string name="err_new_pwd_not_match">New password do not match</string>
    <string name="err_password">Incorrect password</string>
    <string name="change_pwd_success">Password is changed</string>
    <string name="err_incorrect_tr32_len">Incorrect TR31 length</string>
    <string name="err_incorrect_key_ver_len">Incorrect key version length</string>
    <string name="load_aes256_cmi_success">Load AES256 ZCMK encrypted CMI success</string>
    <string name="load_aes256_cma_success">Load AES256 ZCMK encrypted CMA success</string>
    <string name="load_aes256_cmtk_success">Load AES256 ZCMK encrypted CMTK success</string>
    <string name="load_tdes_cmi_success">Load TDES ZCMK encrypted CMI success</string>
    <string name="load_tdes_cma_success">Load TDES ZCMK encrypted CMA success</string>
    <string name="load_tdes_cmtk_success">Load TDES ZCMK encrypted CMTK success</string>
    <string name="load_cmi_success">Load CMI success</string>
    <string name="load_cma_success">Load CMA success</string>
    <string name="load_cmtk_success">Load CMTK success</string>
    <string name="err_load_key_fail">Fail to load the key</string>
    <string name="err_key_path">Key path error</string>
    <string name="err_key_file_not_exists">Key file doesn\'t exist</string>
    <string name="err_no_key_matches">No key matches with the key versions which are in file</string>
    <string name="err_generate_zcmk">Fail to generate ZCMK</string>
    <string name="generate_zcmk_success">Generate ZCMK success</string>
    <string name="err_kcv">Incorrect KCV</string>
    <string name="et_input_kcv">PLS input KCV</string>
    <string name="err_kcv_len">Incorrect KCV length</string>
    <string name="err_zcmk_map">ZCMK map error</string>
    <string name="del_cmi">Delete CMI Key</string>
    <string name="del_cma">Delete CMA key</string>
    <string name="del_cmtk">Delete CMTK</string>
    <string name="del_zcmk">Check KCV</string>
    <string name="del_all_keys">Clear all keys</string>
    <string name="del_ver">Delete version</string>
    <string name="btn_print">Export Keys</string>
    <string name="err_key_index">Incorrect key index</string>
    <string name="input_key_index">Please input key index</string>
    <string name="input_cmtk_index">Please input CMTK index(4-13)</string>
    <string name="cmtk_index_arrange">Incorrect index (4-13)</string>
    <string name="deleting_keys">Deleting keys...</string>
    <string name="delete_key_success">Delete key success</string>
    <string name="delete_key_fail">Fail to delete the key</string>
</resources>