<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="@dimen/dimen_20dp"
        android:paddingRight="@dimen/dimen_20dp">

        <EditText
            android:id="@+id/etKeyBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_TR31"
            android:maxLength="64"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textCapCharacters"/>

        <EditText
            android:id="@+id/etKCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_input_kcv"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etKeyBlock"
            android:inputType="textCapCharacters"/>


        <EditText
            android:id="@+id/etCMTKIndex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_cmtk_index"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etKCV"
            android:inputType="textCapCharacters"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btConfirmKeyBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:text="@string/btn_confirm"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/etKCV"
            app:layout_constraintRight_toRightOf="@id/etKCV"
            app:layout_constraintTop_toBottomOf="@id/etCMTKIndex" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>