<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:id="@+id/cll"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/et_input_username"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etUserPWD"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/etUserName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/et_input_pwd"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            app:layout_constraintTop_toBottomOf="@id/etUserPWD"
            app:layout_constraintRight_toLeftOf="@id/btChange"
            app:layout_constraintLeft_toLeftOf="@id/etUserPWD"
            android:textColor="@color/white"
            android:text="@string/btn_login"/>

        <Button
            android:id="@+id/btChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            app:layout_constraintTop_toTopOf="@id/btLogin"
            app:layout_constraintBottom_toBottomOf="@id/btLogin"
            app:layout_constraintLeft_toRightOf="@id/btLogin"
            app:layout_constraintRight_toRightOf="@id/etUserPWD"
            android:textColor="@color/white"
            android:text="@string/btn_change_pwd"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>