<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/etCMIVerKCV"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/et_input_cmi_ver_kcv"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etCMTKVerKCV"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/etCMIVerKCV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/et_input_cmtk_ver_kcv"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btConfirmVerKCV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            app:layout_constraintTop_toBottomOf="@id/etCMTKVerKCV"
            app:layout_constraintRight_toRightOf="@id/etCMTKVerKCV"
            app:layout_constraintLeft_toLeftOf="@id/etCMTKVerKCV"
            android:textColor="@color/white"
            android:text="@string/btn_confirm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>